# LivkuDumper

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  Il2Cpp.hpp  il2cpp-symbols.hpp  native-lib.cpp
app/src/main/cpp/Config/: GlobalSettings.hpp
gradle/wrapper/: gradle-wrapper.properties
